# Nezuko-Telegram-Bot

./: .dockerignore  .editorconfig  .env.backup  .env.example  .eslintignore  .firebaserc  .gitignore  .mcp.json  .prettierrc  .pylintrc  AGENTS.md  BACKEND_AUDIT_REPORT.md  CLAUDE.md  CODEBASE_AUDIT_REPORT.md  COMPREHENSIVE_PROJECT_ANALYSIS.md  CONTRIBUTING.md  DEPLOYMENT-CICD-GUIDE.md  DEPLOYMENT-REPORT.md  Dockerfile  GEMINI.md  INSFORGE_MIGRATION.md  INSFORGE_MIGRATION_PLAN.md  LICENSE  OPTIMIZATION_REPORT.md  PLANNING.md  README.md  TECH_STACK.md  agent-browser-readme.md  alembic.ini  codebase_analysis_report.md  database.rules.json  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  firebase.json  main.py  main_v1.py  manage.bat  manager.bat  missing_deps.json  (+13 more)
.agent/rules/: memory-bank.md
.agent/skills/: skill-rules.json
.agent/workflows/: memorybank.md
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: admin-panel-ci.yml  ci.yml  docker-publish.yml
.playwright-mcp/: analytics-export-2026-01-25T20-03-45-912Z.json
apps/api/: .env.example  Dockerfile  GEMINI.md  alembic.ini  init_db.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_db.py  test_db_connect.py  test_fb.py  test_settings.py  verify_token.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial.py  2026-02-07_5cc8bbb64ffa_add_timezone_to_bot_model_datetime_.py  2026-02-08_add_bot_isolation_and_indexes.py  2026-02-08_e3f2ffa7dd29_add_deleted_at_to_bot_instances.py  2026_01_24_1234567890ab_add_admin_tables.py  2026_01_25_abcdef123456_add_admin_audit_log.py  2026_01_26_add_admin_logs.py  2026_01_27_verification_log.py  2026_02_04_charts_analytics.py  2026_02_04_telegram_auth.py
apps/api/src/: __init__.py  main.py
apps/api/src/api/v1/: router.py
apps/api/src/api/v1/dependencies/: auth.py  permissions.py  session.py
apps/api/src/api/v1/endpoints/: admins.py  analytics.py  audit.py  auth.py  bots.py  channels.py  charts.py  config.py  dashboard.py  database.py  events.py  groups.py  logs.py  maintenance.py  telegram_auth.py  websocket.py
apps/api/src/api/websocket/: manager.py  redis_listener.py
apps/api/src/api/websocket/handlers/: logs.py
apps/api/src/core/: cache.py  config.py  context.py  database.py  encryption.py  events.py  exceptions.py  firebase.py  logging.py  permissions.py  postgres_logging.py  redis_logging.py  security.py  supabase.py  websocket.py
apps/api/src/middleware/: audit.py  db_metrics.py  error_handler.py  logging.py  rate_limit.py  request_id.py  security.py
apps/api/src/models/: __init__.py  admin_audit_log.py  admin_log.py  admin_session.py  admin_user.py  api_call_log.py  base.py  bot.py  bot_instance.py  config.py  mixins.py  session.py  verification_log.py
apps/api/src/schemas/: admin.py  analytics.py  audit.py  auth.py  base.py  bot_instance.py  channel.py  charts.py  config.py  dashboard.py  database.py  group.py  telegram_auth.py
apps/api/src/services/: admin_service.py  analytics_service.py  audit_service.py  auth_service.py  bot_instance_service.py  channel_service.py  charts_service.py  config_service.py  db_service.py  group_service.py  log_service.py  maintenance_service.py  telegram_api.py  telegram_auth_service.py  uptime_service.py
apps/api/src/tasks/: cleanup.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_auth.py
apps/api/tests/unit/: test_security.py
apps/bot/: .env.example  GEMINI.md  alembic.ini  config.py  main.py  requirements.txt
apps/web/: .env.example  .eslintrc.json  GEMINI.md  eslint.config.mjs  knip.json  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web1/: package.json
bot/: __init__.py  config.py  main.py
bot/core/: cache.py  database.py  loader.py  rate_limiter.py
bot/database/: crud.py  models.py
bot/handlers/: verify.py
bot/services/: batch_verification.py  protection.py  verification.py
bot/utils/: auto_delete.py  benchmark.py  db_optimizer.py  firebase_logging.py  health.py  logging.py  metrics.py  redis_logging.py  resilience.py  sentry.py  ui.py
config/docker/: Caddyfile  Dockerfile.monorepo  Dockerfile.web  docker-compose.yml
docker/compose/: .env.example  docker-compose.dev.yml
docker/development/: Dockerfile.api  Dockerfile.web
docs/: HORIZONTAL_SCALING.md  PHASE1_COMPLETE.md  PHASE4_COMPLETE.md  PRD.md  README.md  alerting_rules.md  production_plan.md
docs/admin-panel/: 02-ARCHITECTURE.md  03-TECH-STACK.md  05-UI-WIREFRAMES.md  06-IMPLEMENTATION.md  07-SECURITY.md  07a-SECURITY-ADVANCED.md  08-DEPLOYMENT.md  README.md
docs/api/: README.md  charts.md
docs/architecture/: NAMING_COMPARISON.md  PROPOSED_STRUCTURE.md  README.md  architecture.md  diagrams.md  folder-structure.md  folder_structure.txt  tech-stack.md
docs/bot/: README.md
docs/contributing/: README.md
docs/database/: README.md
docs/deployment/: README.md
docs/getting-started/: README.md
docs/local/: PROJECT-SETUP.md  README.md  horizontal-scaling.md
docs/official-rules-docs/: python-telegram-bot-rules.md
docs/phase-completions/: PHASE2_COMPLETE.md  PHASE3_COMPLETE.md
docs/setup/: botfather-login-setup.md  environment-configuration.md
docs/web/: README.md
insforge/functions/: manage-bot.js  test-webhook.js
insforge/migrations/: 001_core_tables.sql  002_auth_and_admin_tables.sql  003_logging_tables.sql  004_analytics_functions.sql  005_realtime_setup.sql
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
openspec/: project.md
requirements/: README.md  api.txt  base.txt  bot.txt  dev.txt  prod-api.txt  prod-bot.txt
scripts/: README.md  init-db.sql  seed_test_data.py
scripts/core/: menu.ps1  menu.sh  utils.ps1  (+1 more)
storage/: README.md
tests/: conftest.py  test_auth_api.py  test_config.py  test_database.py  test_edge_cases.py  test_handlers.py  test_load.py  test_performance.py  test_phase1.py  test_phase2.py  test_services.py  utils.py
(+557 files in other folders)
