[project]
name = "nezuko"
version = "1.0.0"
description = "Nezuko - The Ultimate All-In-One Telegram Bot"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
authors = [{ name = "Nezuko Team" }]
keywords = ["telegram", "bot", "group-manager", "verification"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
]

[project.urls]
Homepage = "https://github.com/mohdakil2426/Nezuko-Telegram-Bot"
Repository = "https://github.com/mohdakil2426/Nezuko-Telegram-Bot.git"
Issues = "https://github.com/mohdakil2426/Nezuko-Telegram-Bot/issues"

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (FastAPI standard)
    "B904",   # raise without from inside except
    "ANN",    # missing type annotations (gradual adoption)
    "PLR2004",# magic values
    "ARG001", # unused arguments (often required by frameworks)
    "ARG002", # unused arguments
    "DTZ",    # datetime timezone (gradual adoption)
    "PLC0415",# import placement
    "TRY003", # long exception messages
]

[tool.ruff.lint.isort]
known-first-party = ["bot", "apps"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "ARG001", "PLR2004", "F841", "TID252"]
"apps/api/tests/*" = ["S101", "S105", "ARG001", "PLR2004", "PLC0415", "PT003", "F841"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "venv",
    "migrations",
    "tests",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["bot"]
omit = [
    "bot/database/migrations/*",
    "bot/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
