[project]
name = "nezuko-admin-api"
version = "0.1.0"
description = "Nezuko Admin Panel - FastAPI Backend"
authors = [{name = "Nezuko Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.4",
    "uvicorn[standard]>=0.40.0",
    "python-multipart>=0.0.20",
    "python-jose[cryptography]>=3.5.0",
    "passlib[argon2]>=1.7.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.7.0",
    "email-validator>=2.2.0",
    "sqlalchemy[asyncio]>=2.0.46",
    "asyncpg>=0.31.0",
    "alembic>=1.18.1",
    "redis>=5.2.1",
    "httpx>=0.28.1",
    "websockets>=14.1",
    "structlog>=25.1.0",
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.3",
    "mypy>=1.14.0",
]

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "ASYNC", "S", "B", "A", "COM", "C4", "DTZ", "T10", "ISC", "ICN", "G", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PL", "TRY", "NPY", "RUF"]
ignore = ["ANN101", "ANN102", "S101", "S104"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "ANN"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --cov=src --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
